Deletion of an entire list

--- a/linked_list/intro.ipynb
+++ b/linked_list/intro.ipynb
@@ -644,10 +644,7 @@
     "                # nextNode = temp.next.next\n",
     "                temp.next = temp.next.next\n",
     "                \n",
-    "                \n",
-    "                \n",
-    "    \n",
-    "    \n",
+    "   \n",
     "    def searching_node(self, value):\n",
     "        \"\"\"_summary_\n",
     "\n",
@@ -707,6 +704,180 @@
     "\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "deleting the entire list\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The single linked list does not exist'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#deletion of the entire singly linked list\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value = None):\n",
+    "        self.value = value \n",
+    "        self.next = None \n",
+    "    \n",
+    "    \n",
+    "class linkedlist:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "        \n",
+    "        \n",
+    "    def delete_entire_list(self):\n",
+    "        if self.head is None:\n",
+    "            return 'The SLL is already empty does not exist'\n",
+    "        else:\n",
+    "            self.head = self.tail = None\n",
+    "    \n",
+    "    def search_inlist(self, value):\n",
+    "        \"\"\"_summary_\n",
+    "\n",
+    "        This is UDEMY's way of implementing the search operation\n",
+    "        \"\"\"\n",
+    "        if self.head is None:\n",
+    "            return 'The list is empty, does not exist'\n",
+    "        else:\n",
+    "            temp = self.head\n",
+    "            while temp != None:\n",
+    "                if temp.value == value:\n",
+    "                    return temp.value\n",
+    "                temp = temp.next\n",
+    "            \n",
+    "            return 'The value does not exist'\n",
+    "                    \n",
+    "    def delete_node(self, location):\n",
+    "        \"\"\"_summary_\n",
+    "        This is my VERSION OF THE FUNCTION\n",
+    "        \n",
+    "            this func expects the index of the node to be deleted\n",
+    "            to be passed in as arguement starting from 1\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if self.head is None:\n",
+    "            return 'List is already empty, cant delete more'\n",
+    "        else:\n",
+    "            # deleting at the beginning\n",
+    "            if location == 0:\n",
+    "         #check if there exist only one node in the list       \n",
+    "                if self.head == self.tail:\n",
+    "                    self.head = self.tail = None\n",
+    "                else:\n",
+    "                    self.head = self.head.next\n",
+    "                    \n",
+    "            elif location == -1:\n",
+    "                if self.head == self.tail:\n",
+    "                    self.head = self.tail = None\n",
+    "                else:\n",
+    "                    temp = self.head\n",
+    "                    while temp.next != self.tail:\n",
+    "                        temp = temp.next\n",
+    "                    \n",
+    "                    self.tail = temp\n",
+    "                    temp.next = None\n",
+    "            else:\n",
+    "                temp = self.head\n",
+    "                index = 1\n",
+    "                \n",
+    "                while index != location -1:\n",
+    "                    temp = temp.next\n",
+    "                    index += 1\n",
+    "                \n",
+    "                # nextNode = temp.next.next\n",
+    "                temp.next = temp.next.next\n",
+    "                \n",
+    "   \n",
+    "    def searching_node(self, value):\n",
+    "        \"\"\"_summary_\n",
+    "\n",
+    "       This is my way of implementing the search function\n",
+    "        \"\"\"\n",
+    "        temp = self.head\n",
+    "        index = 1\n",
+    "        while temp != None:\n",
+    "            if temp.value == value:\n",
+    "                return f'node with value {value} found at index {index}'\n",
+    "            \n",
+    "            index += 1\n",
+    "            temp = temp.next\n",
+    "            \n",
+    "        \n",
+    "        return 'Element is not present in the list'\n",
+    "                    \n",
+    "            \n",
+    "    def traversal(self):\n",
+    "        \n",
+    "        temp = self.head\n",
+    "        #check if the list is empty\n",
+    "        if temp is None:\n",
+    "            return 'The single linked list does not exist'\n",
+    "        \n",
+    "        else:\n",
+    "            while temp != None:\n",
+    "                print(temp.value)\n",
+    "                temp = temp.next\n",
+    "        \n",
+    "\n",
+    "single_linked_list = linkedlist()    \n",
+    "first = Node(1)\n",
+    "second = Node(2)\n",
+    "third = Node(3)\n",
+    "fourth = Node(4)\n",
+    "\n",
+    "\n",
+    "first.next = second\n",
+    "second.next = third\n",
+    "third.next = fourth\n",
+    "\n",
+    "single_linked_list.head = first\n",
+    "single_linked_list.tail = fourth\n",
+    "\n",
+    "single_linked_list.traversal()\n",
+    "\n",
+    "print('deleting the entire list')\n",
+    "single_linked_list.delete_entire_list()\n",
+    "\n",
+    "\n",
+    "#printing the list\n",
+    "single_linked_list.traversal()\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Time Complexity -> O(1) \n",
+    "#Space Complexity -> O(1) creating only one temporary node\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
