--- a/linked_list/intro.ipynb
+++ b/linked_list/intro.ipynb
@@ -16,8 +16,7 @@
     "    def __init__(self):\n",
     "        self.head = None\n",
     "        self.tail = None\n",
-    "    \n",
-    "    \n",
+    "       \n",
     "        \n",
     "first = Node(34)\n",
     "second = Node(56)\n",
@@ -59,6 +58,7 @@
     "class linkedlist:\n",
     "    def __init__(self):\n",
     "        self.head = None\n",
+    "        self.tail = None\n",
     "    \n",
     "    def insert_at_beginning(self, value):\n",
     "        new_node = Node(value)\n",
@@ -79,11 +79,8 @@
     "    def insert_at_end(self, value):\n",
     "        new_node = Node(value)\n",
     "        \n",
-    "        temp = self.head\n",
-    "        while temp.next != None:\n",
-    "            temp = temp.next\n",
-    "        \n",
-    "        temp.next = new_node\n",
+    "        self.tail.next = new_node\n",
+    "        self.tail = new_node\n",
     "        \n",
     "    \n",
     "    def print_list(self):\n",
@@ -608,7 +605,7 @@
     "        \"\"\"_summary_\n",
     "        This is my VERSION OF THE FUNCTION\n",
     "        \n",
-    "            this func expects the index of the node to be deleted\n",
+    "            this func expects the index of the node to be deleted+\n",
     "            to be passed in as arguement starting from 1\n",
     "        \"\"\"\n",
     "        \n",
