--- a/stack/intro.ipynb
+++ b/stack/intro.ipynb
@@ -19,10 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self, name, last, age):\n",
+    "        self.name = name\n",
+    "        self.last = last\n",
+    "        self.age = age"
+   ]
   }
  ],
  "metadata": {
@@ -41,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
