--- a/linked_list/doubly.ipynb
+++ b/linked_list/doubly.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the second Node\n"
+      "3343\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'NODE WITH THE VALUE 3343 DOESNT EXIST!!!!!'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -126,16 +116,18 @@
     "            This function expects the value of the node to be passed in\n",
     "            and the location at which the new node is to be inserted\n",
     "        \"\"\"  \n",
-    "\n",
+    "        new_node = Node(value)\n",
     "        if self.head is None:\n",
-    "            return f'The list is empty'\n",
+    "            self.head = new_node\n",
+    "            self.tail = new_node\n",
     "        else:\n",
-    "            new_node = Node(value)\n",
+    "            \n",
     "            if location == 0 or location == 1:\n",
     "            #insert at the beginning of the doubly list\n",
     "                new_node.next = self.head\n",
     "                self.head.prev = new_node\n",
     "                self.head = new_node\n",
+    "       \n",
     "            elif location == -1:\n",
     "            #inserting at the end of the doubly list\n",
     "                self.tail.next = new_node\n",
@@ -159,27 +151,27 @@
     "\n",
     "circular_list = LinkedList()\n",
     "\n",
-    "first = Node(1)\n",
-    "second = Node(2)\n",
-    "third = Node(3)\n",
+    "# first = Node(1)\n",
+    "# second = Node(2)\n",
+    "# third = Node(3)\n",
     "\n",
-    "first.next = second\n",
-    "second.prev = first\n",
-    "second.next = third\n",
-    "third.prev = second\n",
+    "# first.next = second\n",
+    "# second.prev = first\n",
+    "# second.next = third\n",
+    "# third.prev = second\n",
     "\n",
-    "circular_list.head = first\n",
-    "circular_list.tail = third\n",
+    "# circular_list.head = first\n",
+    "# circular_list.tail = third\n",
     "\n",
     "# print('Inserting at the second position of the list')\n",
     "# circular_list.insert_node('John Doe', 2)\n",
     "\n",
     "\n",
-    "print('Deleting the second Node')\n",
-    "circular_list.search_in_list(3343)\n",
+    "# print('Deleting the second Node')\n",
+    "circular_list.insert_node(3343,2)\n",
     "# print()\n",
     "# print('Forward traversal')\n",
-    "# circular_list.forward_traversal()\n",
+    "circular_list.forward_traversal()\n",
     "# print()\n",
     "# print('Backward traversal')\n",
     "# circular_list.backward_traversal()\n",
