Completed the circular Singly Linked Lists Part

--- a/linked_list/circular.ipynb
+++ b/linked_list/circular.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -30,6 +30,8 @@
     }
    ],
    "source": [
+    "#creating the basic list\n",
+    "\n",
     "class Node:\n",
     "    def __init__(self, value, next = None):\n",
     "        self.value = value \n",
@@ -49,6 +51,7 @@
     "            temp = temp.next\n",
     "            print(temp.value)\n",
     "            \n",
+    "            \n",
     "\n",
     "first = Node(1)\n",
     "second = Node(2)\n",
@@ -63,6 +66,455 @@
     "\n",
     "print('traversing')\n",
     "circular_list.traversal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index specified is out of bounds\n",
+      "[2] -> [Second] -> [Fourth] -> [Third] -> [1] -> [3] -> "
+     ]
+    }
+   ],
+   "source": [
+    "#insertion algorithm in a circular singly Linked List\n",
+    "#next method is an method which prints out the next value in an iterator\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value, next = None):\n",
+    "        self.value = value \n",
+    "        self.next = next\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):  \n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    \n",
+    "    def traversal(self):\n",
+    "        temp = self.head\n",
+    "        # my_list = []\n",
+    "        \n",
+    "        if self.head is not None:\n",
+    "            while True:\n",
+    "                print(f'[{temp.value}] ->',end =' ')\n",
+    "                temp = temp.next\n",
+    "                \n",
+    "                if temp == self.head:\n",
+    "                    break\n",
+    "        \n",
+    "    \n",
+    "    def insert_node(self, value, location = None):\n",
+    "        node = Node(value)\n",
+    "        \n",
+    "        #first Node of the list\n",
+    "        if self.head == None:\n",
+    "            self.head = node\n",
+    "            self.tail = node \n",
+    "            node.next = node  \n",
+    "            return 'The CSLL has been created'\n",
+    "        else:\n",
+    "            \n",
+    "        #insert at the beginning of the list\n",
+    "            if location == 0:\n",
+    "                node.next = self.head\n",
+    "                self.head = node\n",
+    "                self.tail.next = node\n",
+    "            \n",
+    "            #inserting at the last of the list\n",
+    "            elif location == -1:\n",
+    "                node.next = self.tail.next\n",
+    "                self.tail.next = node\n",
+    "                self.tail = node\n",
+    "            \n",
+    "            else:\n",
+    "                index = 1\n",
+    "                temp = self.head\n",
+    "                \n",
+    "                while index != location:\n",
+    "                    index += 1\n",
+    "                    prev_node = temp\n",
+    "                    temp = temp.next\n",
+    "                    \n",
+    "                    if temp.next == self.head:\n",
+    "                        print('Index specified is out of bounds')\n",
+    "                        break\n",
+    "                \n",
+    "                \n",
+    "                if temp.next == self.head:\n",
+    "                    return 'Doesnt matter'\n",
+    "                \n",
+    "                node.next = temp\n",
+    "                prev_node.next = node\n",
+    "            \n",
+    "            return 'The node has been successfully created'    \n",
+    "                \n",
+    "\n",
+    "\n",
+    "my_list = LinkedList() \n",
+    "\n",
+    "my_list.insert_node('1')\n",
+    "my_list.insert_node('2', 0)\n",
+    "my_list.insert_node('3', -1)\n",
+    "my_list.insert_node('Second', 2)\n",
+    "my_list.insert_node('Third', 3)\n",
+    "my_list.insert_node('Fourth', 3)\n",
+    "\n",
+    "my_list.insert_node('Out of Bounds', 9)\n",
+    "\n",
+    "\n",
+    "my_list.traversal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] -> [2] -> [3] -> [4] -> \n",
+      "Searching for an Element\n",
+      "Current Values are 1 and index is 1\n",
+      "Current Values are 2 and index is 2\n",
+      "Current Values are 3 and index is 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Node with 4 found at index 4'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#searching for a specific node in CSLL\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value, next = None):\n",
+    "        self.value = value \n",
+    "        self.next = next\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):  \n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    \n",
+    "    def traversal(self):\n",
+    "        temp = self.head\n",
+    "        # my_list = []\n",
+    "        \n",
+    "        if self.head is not None:\n",
+    "            while True:\n",
+    "                print(f'[{temp.value}] ->',end =' ')\n",
+    "                temp = temp.next\n",
+    "                \n",
+    "                if temp == self.head:\n",
+    "                    break\n",
+    "        \n",
+    "    def search_node(self, value):\n",
+    "        \"\"\"_summary_\n",
+    "\n",
+    "        Will return an index starting from 1 and not from traditional 0\n",
+    "        \"\"\"\n",
+    "       \n",
+    "        if self.head is None:\n",
+    "             return 'The list has not been created yet'\n",
+    "            \n",
+    "        else:\n",
+    "            # temp = self.head\n",
+    "            # while temp:\n",
+    "            #     if temp.value == value:\n",
+    "            #         return 'Element found'\n",
+    "                \n",
+    "            #     temp = temp.next\n",
+    "                \n",
+    "            #     if temp.next == self.tail.next:\n",
+    "            #         return 'The node does not exist!'\n",
+    "            \n",
+    "            \n",
+    "            index = 1\n",
+    "            temp = self.head\n",
+    "            while True:\n",
+    "                if temp.value == value:\n",
+    "                    return f'Node with {value} found at index {index}'\n",
+    "                print(f'Current Values are {temp.value} and index is {index}')\n",
+    "                temp = temp.next\n",
+    "                index += 1\n",
+    "                \n",
+    "                \n",
+    "                if temp == self.head:\n",
+    "                    break\n",
+    "                    \n",
+    "            return 'Element does not exist in the list'\n",
+    "                    \n",
+    "        \n",
+    "    def insert_node(self, value, location = None):\n",
+    "        node = Node(value)\n",
+    "        \n",
+    "        #first Node of the list\n",
+    "        if self.head == None:\n",
+    "            self.head = node\n",
+    "            self.tail = node \n",
+    "            node.next = node  \n",
+    "            return 'The CSLL has been created'\n",
+    "        else:\n",
+    "            \n",
+    "        #insert at the beginning of the list\n",
+    "            if location == 0:\n",
+    "                node.next = self.head\n",
+    "                self.head = node\n",
+    "                self.tail.next = node\n",
+    "            \n",
+    "            #inserting at the last of the list\n",
+    "            elif location == -1:\n",
+    "                node.next = self.tail.next\n",
+    "                self.tail.next = node\n",
+    "                self.tail = node\n",
+    "            \n",
+    "            else:\n",
+    "                index = 1\n",
+    "                temp = self.head\n",
+    "                \n",
+    "                while index != location:\n",
+    "                    index += 1\n",
+    "                    prev_node = temp\n",
+    "                    temp = temp.next\n",
+    "                    \n",
+    "                    if temp.next == self.head:\n",
+    "                        print('Index specified is out of bounds')\n",
+    "                        break\n",
+    "                \n",
+    "                \n",
+    "                if temp.next == self.head:\n",
+    "                    return 'Doesnt matter'\n",
+    "                \n",
+    "                node.next = temp\n",
+    "                prev_node.next = node\n",
+    "            \n",
+    "            return 'The node has been successfully created'    \n",
+    "                \n",
+    "\n",
+    "\n",
+    "my_list = LinkedList() \n",
+    "\n",
+    "\n",
+    "# first = Node(1)\n",
+    "# second = Node(2)\n",
+    "# third = Node(3)\n",
+    "# first.next = second\n",
+    "# second.next = third\n",
+    "# third.next = first\n",
+    "# my_list = LinkedList()\n",
+    "\n",
+    "# my_list.head = first\n",
+    "# my_list.tail = third\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "my_list.insert_node(1)\n",
+    "my_list.insert_node(2, -1)\n",
+    "my_list.insert_node(3, -1)\n",
+    "my_list.insert_node(4, -1)\n",
+    "\n",
+    "my_list.traversal()\n",
+    "\n",
+    "print()\n",
+    "print('Searching for an Element')\n",
+    "my_list.search_node(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] -> [2] -> [3] -> \n",
+      "Deleting the first Node\n",
+      "[1] -> [2] -> [3] -> "
+     ]
+    }
+   ],
+   "source": [
+    " \"\"\"\n",
+    " Deleting an element in A CSLL\n",
+    " \"\"\"\n",
+    "class Node:\n",
+    "    def __init__(self, value, next = None):\n",
+    "        self.value = value \n",
+    "        self.next = next\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):  \n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "    \n",
+    "    def traversal(self):\n",
+    "        temp = self.head\n",
+    "        # my_list = []\n",
+    "        \n",
+    "        if self.head is not None:\n",
+    "            while True:\n",
+    "                print(f'[{temp.value}] ->',end =' ')\n",
+    "                temp = temp.next\n",
+    "                \n",
+    "                if temp == self.head:\n",
+    "                    break\n",
+    "        \n",
+    "    def search_node(self, value):\n",
+    "        \"\"\"_summary_\n",
+    "\n",
+    "        Will return an index starting from 1 and not from traditional 0\n",
+    "        \"\"\"\n",
+    "       \n",
+    "        if self.head is None:\n",
+    "             return 'The list has not been created yet'\n",
+    "            \n",
+    "        else:\n",
+    "            # temp = self.head\n",
+    "            # while temp:\n",
+    "            #     if temp.value == value:\n",
+    "            #         return 'Element found'\n",
+    "                \n",
+    "            #     temp = temp.next\n",
+    "                \n",
+    "            #     if temp.next == self.tail.next:\n",
+    "            #         return 'The node does not exist!'\n",
+    "            \n",
+    "            \n",
+    "            index = 1\n",
+    "            temp = self.head\n",
+    "            while True:\n",
+    "                if temp.value == value:\n",
+    "                    return f'Node with {value} found at index {index}'\n",
+    "                print(f'Current Values are {temp.value} and index is {index}')\n",
+    "                temp = temp.next\n",
+    "                index += 1\n",
+    "                \n",
+    "                \n",
+    "                if temp == self.head:\n",
+    "                    break\n",
+    "                    \n",
+    "            return 'Element does not exist in the list'\n",
+    "                    \n",
+    "    def delete_node(self, location):\n",
+    "        if self.head is None:\n",
+    "            return 'The list is empty'\n",
+    "        else:\n",
+    "            if location == 0:\n",
+    "                self.tail = self.head.next\n",
+    "                self.head = self.head.next\n",
+    "            elif location == -1:\n",
+    "                temp = self.head\n",
+    "                \n",
+    "                while True:\n",
+    "                    if temp == self.tail or temp.next == self.tail:\n",
+    "                        break\n",
+    "                    temp = temp.next\n",
+    "                    \n",
+    "                    temp.next = self.tail.next\n",
+    "                    self.tail = temp\n",
+    "            else :\n",
+    "                temp = self.head\n",
+    "                index = 1\n",
+    "                while index != location:\n",
+    "                    if temp.next == self.head:\n",
+    "                        print('Index Range Out of Bounds')\n",
+    "                    prev_node = temp\n",
+    "                    temp = temp.next\n",
+    "                    index += 1\n",
+    "                \n",
+    "                print(f'temp is {temp.value}')\n",
+    "                prev_node.next = temp.next\n",
+    "                \n",
+    "        \n",
+    "    def delete_list(self, location):\n",
+    "        pass\n",
+    "        \n",
+    "        \n",
+    "    def insert_node(self, value, location = None):\n",
+    "        node = Node(value)\n",
+    "        \n",
+    "        #first Node of the list\n",
+    "        if self.head == None:\n",
+    "            self.head = node\n",
+    "            self.tail = node \n",
+    "            node.next = node  \n",
+    "            return 'The CSLL has been created'\n",
+    "        else:\n",
+    "            \n",
+    "        #insert at the beginning of the list\n",
+    "            if location == 0:\n",
+    "                node.next = self.head\n",
+    "                self.head = node\n",
+    "                self.tail.next = node\n",
+    "            \n",
+    "            #inserting at the last of the list\n",
+    "            elif location == -1:\n",
+    "                node.next = self.tail.next\n",
+    "                self.tail.next = node\n",
+    "                self.tail = node\n",
+    "            \n",
+    "            else:\n",
+    "                index = 1\n",
+    "                temp = self.head\n",
+    "                \n",
+    "                while index != location:\n",
+    "                    index += 1\n",
+    "                    prev_node = temp\n",
+    "                    temp = temp.next\n",
+    "                    \n",
+    "                    if temp.next == self.head:\n",
+    "                        print('Index specified is out of bounds')\n",
+    "                        break\n",
+    "                \n",
+    "                \n",
+    "                if temp.next == self.head:\n",
+    "                    return 'Doesnt matter'\n",
+    "                \n",
+    "                node.next = temp\n",
+    "                prev_node.next = node\n",
+    "            \n",
+    "            return 'The node has been successfully created'    \n",
+    "                \n",
+    "\n",
+    "\n",
+    "my_list = LinkedList() \n",
+    "\n",
+    "\n",
+    "first = Node(1)\n",
+    "second = Node(2)\n",
+    "third = Node(3)\n",
+    "first.next = second\n",
+    "second.next = third\n",
+    "third.next = first\n",
+    "my_list = LinkedList()\n",
+    "\n",
+    "my_list.head = first\n",
+    "my_list.tail = third\n",
+    "\n",
+    "my_list.traversal()\n",
+    "\n",
+    "print()\n",
+    "print('Deleting the first Node')\n",
+    "my_list.delete_node(12)\n",
+    "my_list.traversal()"
    ]
   }
  ],
