Started INTERVIEW QUESTIONS FOR linkedList

--- a/linked_list/circular.ipynb
+++ b/linked_list/circular.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
      "text": [
       "[1] -> [2] -> [3] -> \n",
       "Deleting the first Node\n",
-      "[1] -> [2] -> [3] -> "
+      "The list does not exist yet\n"
      ]
     }
    ],
@@ -371,11 +371,14 @@
     "        \n",
     "        if self.head is not None:\n",
     "            while True:\n",
-    "                print(f'[{temp.value}] ->',end =' ')\n",
+    "                print(f'[{temp.value}]',end =' -> ')\n",
     "                temp = temp.next\n",
     "                \n",
     "                if temp == self.head:\n",
     "                    break\n",
+    "        else:\n",
+    "            print('The list does not exist yet')\n",
+    "            return\n",
     "        \n",
     "    def search_node(self, value):\n",
     "        \"\"\"_summary_\n",
@@ -436,6 +439,7 @@
     "                while index != location:\n",
     "                    if temp.next == self.head:\n",
     "                        print('Index Range Out of Bounds')\n",
+    "                        return\n",
     "                    prev_node = temp\n",
     "                    temp = temp.next\n",
     "                    index += 1\n",
@@ -444,8 +448,11 @@
     "                prev_node.next = temp.next\n",
     "                \n",
     "        \n",
-    "    def delete_list(self, location):\n",
-    "        pass\n",
+    "    def delete_list(self):\n",
+    "        if self.head is None:\n",
+    "            return 'The list is empty'\n",
+    "        else:\n",
+    "            self.head = self.tail = None\n",
     "        \n",
     "        \n",
     "    def insert_node(self, value, location = None):\n",
@@ -513,7 +520,7 @@
     "\n",
     "print()\n",
     "print('Deleting the first Node')\n",
-    "my_list.delete_node(12)\n",
+    "my_list.delete_list()\n",
     "my_list.traversal()"
    ]
   }
